[ADD] PayPal integration

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/e52d74ec85.js" crossorigin="anonymous"></script>
+    <title>Platzi Merch</title>
+    <script
+    defer
+    src="https://www.paypal.com/sdk/js?client-id=AYYmn5Xuyt_JxHSUvA6VeeMvqxpLvwRrus7GYC04o9NL5g2NVleRpnepofR58v_7iVL2gPyoQ7CpIbRE"
+    ></script>
 </head>
 <body>
     <div id="app"></div>
